--- a/index.html
+++ b/index.html
@@ -1,13 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+
 <body>
     <h1> hello git</h1>
     <header> header</header>
+    <div class="slider">
+        <h1>slider1</h1>
+        <h1>slider2</h1>
+    </div>
 
 </body>
+
 </html>
