--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <div class="slider">
         <h1>slider1</h1>
         <h1>slider2</h1>
+        <h1>slider3</h1>
     </div>
     <footer> footer</footer>
 
