--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <h1>slider2</h1>
         <h1>slider3</h1>
     </div>
-    <footer> all footer</footer>
+    <footer>footer</footer>
 </body>
 
 </html>
