--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <h1>slider3</h1>
     </div>
     <footer>footer</footer>
-    <h2>shaghayegh salehi</h2>
+    <h2>miss salehi</h2>
 </body>
 
 </html>
