--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     <footer>footer</footer>
     <h2>miss salehi</h2>
     <h3>welcome to my site</h3>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus veritatis autem mollitia et alias laborum blanditiis architecto, vitae sed a asperiores ex tempora voluptatem voluptas fuga necessitatibus molestiae possimus quo?</p>
 </body>
 
 </html>
