--- a/index.html
+++ b/index.html
@@ -18,7 +18,13 @@
     <footer>footer</footer>
     <h2>miss salehi</h2>
     <h3>welcome to my site</h3>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus veritatis autem mollitia et alias laborum blanditiis architecto, vitae sed a asperiores ex tempora voluptatem voluptas fuga necessitatibus molestiae possimus quo?</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus veritatis autem mollitia et alias laborum blanditiis architecto, vitae sed a asperiores ex tempora voluptatem voluptas fuga necessitatibus molestiae possimus quo?
+     </p>
+     <ul>
+        <li>home</li>
+        <li>gallery</li>
+        <li>about me</li>
+     </ul>
 </body>
 
 </html>
