--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus veritatis autem mollitia et alias laborum blanditiis architecto, vitae sed a asperiores ex tempora voluptatem voluptas fuga necessitatibus molestiae possimus quo?
      </p>
      <ul>
-        <li>home</li>
+        <li>new home</li>
         <li>gallery</li>
         <li>about me</li>
      </ul>
