--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
         <li>my home</li>
         <li>gallery</li>
         <li>about me</li>
+        <li>call me</li>
      </ul>
      <footer>
         copy its a list
