--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <li>call me</li>
      </ul>
      <footer>
-        copy its a list
+        copy its a list footer 
      </footer>
 </body>
 
